--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -60,5 +60,26 @@
         <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
     </li>
     <!-- END SIGN OUT -->
+
+    <!-- TASKS -->
+    <li class="xn-icon-button pull-right">
+        <a href="#"><span class="fa fa-tasks"></span></a>
+        <div class="informer informer-warning">Change Branch</div>
+        <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging">
+            <div class="panel-heading">
+                <h3 class="panel-title"><span class="fa fa-tasks"></span> Branches</h3>
+            </div>
+            <div class="panel-body list-group scroll">
+                @{Html.RenderAction("ChangeBranch", "Employee");}                
+            </div>
+            <div class="panel-footer text-center">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
+                </div>
+            </div>
+        </div>
+    </li>
+    <!-- END TASKS -->
+
 </ul>
 <!-- END X-NAVIGATION VERTICAL -->
