--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -51,6 +51,7 @@
         <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Reports</span></a>
         <ul class="animated zoomIn">
             <li><a href="/SalesOrder/Report"><span class="fa fa-users"></span> Sales </a></li>
+            <li><a href="/Inventory/Search"><span class="fa fa-users"></span> Inventory </a></li>
         </ul>
     </li>
     @*End*@
