--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -70,9 +70,9 @@
             <div class="panel-heading">
                 <h3 class="panel-title"><span class="fa fa-tasks"></span> Branches</h3>
             </div>
-            <div class="panel-body list-group scroll">
+            @*<div class="panel-body list-group scroll">
                 @{Html.RenderAction("ChangeBranch", "Employee");}                
-            </div>
+            </div>*@
             <div class="panel-footer text-center">
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
