--- a/MyLeoRetailer/Views/PostLogin/Report/Inventory/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Report/Inventory/Search.cshtml
@@ -43,33 +43,35 @@
 
                         <div class="col-md-4">
 
-                            <div class="form-group">                                
 
-                                <div class="form-group auto-complete">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch Name.</span>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control autocomplete-text" id="textBrand" name="Branch" placeholder="Branch name" value="" data-table="Inventory" data-col="Branch_Id,Branch_Name" data-headernames="Branches" data-param="hdntemp" data-field="Branch_Id" />
-                                        <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer1" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                        <input type="hidden" id="hdnBranch_Id" value="" name="Filter.Branch_Id" class="auto-complete-value" />
-                                        <input type="hidden" id="hdnBranch_Name" value="" name="" class="auto-complete-label" />
-                                    </div>
+
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch Name.</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control autocomplete-text" id="textBrand" name="Branch" placeholder="Branch name" value="" data-table="Inventory" data-col="Branch_Id,Branch_Name" data-headernames="Branches" data-param="hdntemp" data-field="Branch_Id" />
+                                    <span class="input-group-addon">
+                                        <a href="#" class="text-muted" id="hrefDealer1" role="button">
+                                            <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i>
+                                        </a>
+                                    </span>
+                                    <input type="hidden" id="hdnBranch_Id" value="" name="Filter.Branch_Id" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnBranch_Name" value="" name="" class="auto-complete-label" />
                                 </div>
                             </div>
+
 
                         </div>
 
                         <div class="col-md-4">
 
-                            <div class="form-group">
 
-                                <div class="form-group auto-complete">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Code.</span>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control autocomplete-text" id="textSKU_Code" name="SKU" placeholder="SKU code" value="" data-table="Inventory" data-col="Inventory_Id,Product_SKU" data-headernames="Product SKU" />
-                                        <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                        <input type="hidden" id="hdnInventory_Id" value="" name="" class="auto-complete-value" />
-                                        <input type="hidden" id="hdnProduct_SKU" value="" name="Filter.Product_SKU" class="auto-complete-label" />
-                                    </div>
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Code.</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control autocomplete-text" id="textSKU_Code" name="SKU" placeholder="SKU code" value="" data-table="Inventory" data-col="Inventory_Id,Product_SKU" data-headernames="Product SKU" />
+                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnInventory_Id" value="" name="" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnProduct_SKU" value="" name="Filter.Product_SKU" class="auto-complete-label" />
                                 </div>
                             </div>
 
