--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -77,7 +77,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment status</span>
-                                        <select class="form-control input-sm" id="drpPayble_Status" name="Receivable.Payment_Status">
+                                        <select class="form-control" id="drpPayble_Status" name="Receivable.Payment_Status">
                                             <option value="0">Select Payment Status</option>
 
                                             @foreach (var item in LookupInfo.Get_Receivable_Status())
