--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model MyLeoRetailer.Models.EmployeeViewModel
+@using MyLeoRetailerInfo.Common
+
+@{
     ViewBag.Title = "Search";
 }
 
@@ -95,7 +98,7 @@
                     <div class="row">
 
                         <div class="col-md-8" style="padding: 0px;">
-
+                         
 
                             <div class="form-group auto-complete">
                                 <div class="input-group">
