--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/_ChangeBranch.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/_ChangeBranch.cshtml
@@ -28,11 +28,11 @@
             <div class="table-responsive">
                 <table class="table table-hover" style="margin-bottom: 0;">
                     @*<thead>
-                        <tr>
-                            <th>Branch</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>*@
+                            <tr>
+                                <th>Branch</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>*@
                     <tbody>
                         @{int counter = 0;}
 
@@ -58,7 +58,7 @@
                                     </label>
                                 </td>
                             </tr>
-                                        ++@counter;
+                           counter++;
                         }
                     </tbody>
                 </table>
