Product Barcode Generator Code.

--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -26,6 +26,7 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Product Price Management</h2>
         </div>
+        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "Product")'"><i class="fa fa-angle-double-left"></i> BACK</button>
     </div>
 </div>
 
