--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/_ChangeBranch.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/_ChangeBranch.cshtml
@@ -30,8 +30,7 @@
    
     <form form role="form" id="frmChangeBranch">
 
-        <input type="hidden" value="@Cookies.Page_URL" name="Page_URL" />
-
+        <input type="hidden" value="@Model.Page_URL" name="Page_URL" id="hdnPage_URL" />       
 
         <div class="row">
             <div class="table-responsive">
@@ -71,13 +70,13 @@
 
 
         <div class="row">
-            <div class="col-md-12" style="margin-bottom: 10px; padding-top: 1px;">
-                <div class=" form-group">
-                    <div class="input-group pull-right">
+            
+                <div class="modal-footer">
+                    <div class="btn-group">
                         <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
                     </div>
                 </div>
-            </div>
+         
         </div>
        
     </form>
