--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -76,7 +76,7 @@
     <!-- TASKS -->
         <li class="xn-icon-button pull-right">
             <a href="#" data-toggle="tooltip panel" id="btnSaveChaneBranch" data-target="#div_Change_Branch" data-placement="bottom" title="Change Branch"><span class="fa fa-map-marker"></span></a>
-            @*<input type="hidden" value="@Cookies.Page_URL" name="Page_URL" />*@
+            <input type="hidden" value="@Cookies.Page_URL" name="Page_URL" id="hdnPage_URL" />
 
             @* Gauravi: 05-10-2016 *@
 
