--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Dispatched_Product_Listing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Dispatched_Product_Listing.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Search";
 }
 
-<script src="~/Scripts/Modules/ProductDispatch/Customised_Comman_Method.js"></script>
+<script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/ProductDispatch/dispatched_product_listing_event.js"></script>
 <script src="~/Scripts/Modules/ProductDispatch/dispatched_product_listing_method.js"></script>
 
@@ -22,6 +22,7 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp;Inward Product </h2>
         </div>
+        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Index", "Dashboard")'"><i class="fa fa-angle-double-left"></i> BACK</button>
     </div>
 
 </div>
@@ -65,6 +66,17 @@
 
     </div>
 
+    <div class="row">
+        <div class="col-md-6" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+
+            <div class="btn-group pull-right">
+                <a class="btn btn-success active" role="button" id="btnAccept">Accept Dispatch </a>
+                
+            </div>
+
+        </div>
+
+    </div>
    
 
     </div>
