--- a/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/Search.cshtml
@@ -39,10 +39,17 @@
 
                         <div class="col-md-5">
 
-                            <div class="form-group">
-                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Product SKU</span>
-                                <input type="text" class="form-control" name="Filter.Product_SKU" placeholder="Enter Product SKU to search." />
-                                @*<input type="hidden" id="hdnReplacementId" name="Replacement.Replacement_Id" value="@Model.Replacement.Replacement_Id" />*@
+                            <div class="input-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Product SKU.</span>
+                            </div>
+                            <div class="form-group auto-complete">
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control color-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search." value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnProduct_SKU" value="" name="Filter.Product_SKU" class="auto-complete-value" />
+
+                                </div>
                             </div>
 
                         </div>
