--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -49,10 +49,10 @@
 
                                 <h4 style="margin-top: 0px;">Primary information.</h4>
 
-                                <div class="form-group">
+                                @*<div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
                                     <input type="text" class="form-control input-sm" name="PurchaseReturn.Debit_Note_No" id="txtDebit_Note_No" value="@Model.PurchaseReturn.Debit_Note_No" placeholder="Enter debit note no." />
-                                </div>
+                                </div>*@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Retirn Date.</span>
