--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -173,10 +173,10 @@
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Quantity" id="textQuantity_0" value="1" onblur="javascript: CalculateTotal();" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].WSR_Price" id="textWSR_Price_0" readonly />
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].WSR_Price" id="textWSR_Price_0" value="0" readonly />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Amount" id="textAmount_0" readonly />
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Amount" id="textAmount_0" value="0" readonly />
                                         </td>
                                         <td>
                                             <div class="btn-group">
@@ -204,13 +204,13 @@
                                             <label>Total Qty</label>
                                         </td>
                                         <td style="width:80px;">
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Total_Quantity" readonly id="textTotalQuantity_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Total_Quantity" readonly value="0" id="textTotalQuantity_0">
                                         </td>
                                         <td style="width:80px;">
                                             <label>Total Amt</label>
                                         </td>
                                         <td style="width:80px;">
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Total_Amount" readonly id="textTotalAmount_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Total_Amount" readonly value="0" id="textTotalAmount_0">
                                         </td>
                                         <td style="width:140px;"></td>
                                     </tr>
@@ -220,10 +220,10 @@
                                             <label>Discount</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Percentage" id="textDiscountPercentage_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Percentage" value="0" id="textDiscountPercentage_0">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Amount" readonly id="textDiscountAmount_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Amount" value="0" readonly id="textDiscountAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
@@ -233,7 +233,7 @@
                                             <label>Gross Amt</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Gross_Amount" readonly id="textGrossAmount_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Gross_Amount" value="0" readonly id="textGrossAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
@@ -243,10 +243,10 @@
                                             <label>Tax</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Tax_Percentage" readonly id="textTaxPercentage_0" />
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Tax_Percentage" readonly value="0" id="textTaxPercentage_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Tax_Amount" readonly id="textTaxAmount_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Tax_Amount" value="0" readonly id="textTaxAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
@@ -266,7 +266,7 @@
                                             <label>NET Amt</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Net_Amount" readonly id="textNETAmount_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Net_Amount" value="0" readonly id="textNETAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
