--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -154,6 +154,7 @@
                                 <tbody>
                                     <tr id="PurchaseReturnItemRow_0">
                                         <td>
+                                            <input type="hidden" name="PurchaseReturn.PurchaseReturns[0].Item_Ids" id="hdnItem_Ids_0" />
                                             <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].Barcode" id="textBarcode_No_0">
                                         </td>
                                         @*<td>
