--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Search.cshtml
@@ -32,7 +32,7 @@
             <div class="block">
 
                 <form role="form" id="frmPurchaseReturnRequest">
-                    <input type="hidden" id="hdnPurchase_Return_Request_Id" name="PurchaseReturnRequest.Purchase_Return_Request_Id" class="auto-complete-value" value="@Model.PurchaseReturnRequest.Purchase_Return_Request_Id"/>
+                    <input type="hidden" id="hdnPurchase_Return_Request_Id" name="PurchaseReturnRequest.Purchase_Return_Request_Id" value="@Model.PurchaseReturnRequest.Purchase_Return_Request_Id"/>
                     <div class="row">
 
                         <div class="col-md-5">
@@ -60,9 +60,9 @@
                         <div class="col-md-7" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                @*<button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>*@
-                                <a role="button" class="btn btn-success active" href="/purchase-return-request/create-purchase-return-request" id="btnCreate">Create</a>
-                                <button role="button" class="btn btn-danger active" value="Edit" id="btnEditPurchaseReturnRequest">View</button>
+                                <button type="button" class="btn btn-success active" value="Create" id="btnCreate">Create</button>
+                                @*<a type="button" class="btn btn-success active" href="/purchase-return-request/create-purchase-return-request" id="btnCreate">Create</a>*@
+                                <button type="button" class="btn btn-danger active" value="Edit" id="btnView">View</button>
                             </div>
 
                         </div>
